name:                mysterytube
version:             0.1.0.0
synopsis:            Paste a youtube URL and get the video that the previous user put
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Francesco Gazzetta
maintainer:          francygazz@gmail.com
copyright:           2017 Francesco Gazzetta
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
data-files:          static/*.js
                     static/*.css
                     static/*.png

executable mysterytube
  main-is:             Main.hs
  other-modules:       Paths_mysterytube
                       MTApp
                       Index
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
                     , warp
                     , wai
                     , servant
                     , servant-server
                     , servant-js
                     , servant-lucid
                     , lucid
                     , text
                     , mtl
                     , aeson
                     , http-media
                     , filepath
  hs-source-dirs:      src
  default-language:    Haskell2010
