name:                mysterytube
version:             0.1.0.0
synopsis:            Paste a youtube URL and get the video that the previous user put
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Francesco Gazzetta
maintainer:          francygazz@gmail.com
copyright:           2017 Francesco Gazzetta
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
data-files:          static/*.js
                     static/*.css
                     static/*.png
tested-with:         GHC==7.10.3
                   , GHC==8.0.2
                   , GHC==8.2.2
                   , GHC==8.4.2
                   , GHC==8.6.1
                   , GHC==8.8.1
                   , GHC==8.10.7
                   , GHC==9.0.2
                   , GHC==9.2.2

executable mysterytube
  main-is:             Main.hs
  other-modules:       Paths_mysterytube
                       MTApp
                       Index
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.17
                     , warp
                     , wai
                     , servant
                     , servant-server
                     , servant-js
                     , servant-lucid
                     , lucid
                     , text
                     , mtl
                     , aeson
                     , http-media
                     , filepath
                     , temporary
                     , fast-logger >=3.0 && <3.1
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
