cabal-version:       2.2
name:                mysterytube
version:             0.1.0.0
synopsis:            Paste a youtube URL and get the video that the previous user put
description:
  A website with a single textbox where a youtube url can be pasted.
  When confirming, the video id will be stored for the next visitor and the
  video selected by the _previous_ visitor will play. Mystery!
license:             EUPL-1.2
license-file:        LICENSE
author:              Francesco Gazzetta
maintainer:          fgaz@fgaz.me
copyright:           2017-2022 Francesco Gazzetta
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
data-files:          static/*.js
                     static/*.css
                     static/*.png
tested-with:         GHC==8.10.7
                   , GHC==9.0.2
                   , GHC==9.2.2
                   , GHC==9.8.2

source-repository head
  type:                git
  location:            https://github.com/fgaz/mysterytube.git

executable mysterytube
  main-is:             Main.hs
  autogen-modules:     Paths_mysterytube
  other-modules:       Paths_mysterytube
                       MTApp
                       Index
  -- other-extensions:    
  build-depends:       base >=4.14 && <4.22
                     , warp
                     , wai
                     , servant
                     , servant-server
                     , servant-js
                     , servant-lucid
                     , lucid
                     , text
                     , mtl
                     , aeson
                     , http-media
                     , filepath
                     , temporary
                     , fast-logger >=3.0 && <3.3
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
